--- a/src/Stephane/BlogBundle/Resources/config/services.yml
+++ b/src/Stephane/BlogBundle/Resources/config/services.yml
@@ -2,3 +2,12 @@ services:
     stephane_blog.slugger:
         class: Stephane\BlogBundle\Service\Slugger
 #        arguments: [@service_id, "plain_value", %parameter%]
+    stephane_blog.article_listener:
+        class: Stephane\BlogBundle\Service\SlugListener
+        tags:
+            - { name: doctrine.event_listener, event: preUpdate }
+            
+    stephane_blog.article_listener2:
+        class: Stephane\BlogBundle\Service\SlugListener
+        tags:
+            - { name: doctrine.event_listener, event: preUpdate }
